# internship-tracker

./: .gitignore  ARCHITECTURE.md  COVERAGE_PLAN.md  REQUIREMENTS.md  TASKS.md  pyproject.toml
src/internship_tracker/: __init__.py  cli.py  core.py  seed_data.py
tests/: test_core.py
